<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bomberman</string>
    <string name="new_game">New Game</string>
    <string name="join_server">Join Server</string>
    <string name="create_server">Create Server</string>
    <string name="choose_username">Choose a username:</string>
    <string name="accept">Accept</string>
    <string name="about_the_game">About the Game:</string>
    <string name="about_us">About Us:</string>
    <string name="about_the_game_story">This game was made from a project of Mobile Computing.\nIt was made to be as similar as the one made for the NES.\nHope you enjoy it!</string>
    <string name="our_story">We are a group of students from Técnico Lisboa.\n Follow us at https://github.com/theedward/Bomberman</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="about">About</string>
    <string name="start">Start</string>
    <string name="level">Level</string>
    <string name="player_name">Player Name</string>
    <string name="player_score">Player Score</string>
    <string name="time_left">Time Left</string>
    <string name="number_player">Number Players</string>
    <string name="my_device">My device:</string>
    <string name="pause">Pause</string>
    <string name="quit">Quit</string>
    <string name="bomb">Bomb</string>
    <string name="arrowLeft">←</string>
    <string name="arrowUp">↑</string>
    <string name="arrowRight">→</string>
    <string name="arrowDown">↓</string>
    <string name="map_preview">Map preview</string>
    <string name="enter_username_here">Enter username here</string>
    <string name="must_enter_username">You must enter a username</string>
    <string name="choose_server">Please choose a server to join:</string>
    <string name="my_game_players">My game Players:</string>
    <string name="choose_level">Choose game level:</string>
    <string name="enter_servername_here">Enter server name here</string>
    <string name="players">Players:</string>
    <string name="waitingGameStart">Waiting for game to start..</string>
    <string name="title_activity_new_game">NewGameActivity</string>
    <string name="title_activity_multiplayer">MultiplayerActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_game">GameActivity</string>
    <string name="title_activity_join_server">JoinServerActivity</string>
    <string name="title_activity_create_server">CreateServerActivity</string>
    <string name="title_activity_loading_game">LoadingGameActivity</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_multi_player_game">MultiPlayerGameActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_simple_chat">SimpleChatActivity</string>

    <!-- SimpleChatActivity strings -->
    <string name="port">10001</string>
    <string name="hello">Hello World, SimpleChatActivity!</string>
    <string name="sendButton">Send</string>
    <string name="connectButton">Connect</string>
    <string name="disconnectButton">Disconnect</string>
    <string name="serviceButton">WiFi On</string>
    <string name="cancelButton">WiFi Off</string>
    <string name="inRangeButton">In Range</string>
    <string name="inGroupButton">In Network</string>

</resources>
