<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cmov.bomberman.controller.LoadingActivity">

    <TextView
            android:id="@+id/txtPlayers"
            android:text="@string/players"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"/>

    <ListView
            android:id="@+id/playerList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txtPlayers"
            android:layout_above="@+id/btnStart">
            </ListView>

    <Button
            android:id="@+id/btnStart"
            android:onClick="start"
            android:text="@string/start"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"/>

    <TextView
            android:id="@+id/txtWaitingGameStart"
            android:text="@string/waitingGameStart"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"/>
</RelativeLayout>
