<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cmov.bomberman.controller.CreateServerActivity"
    android:background="@android:color/holo_red_dark"
    >

    <TextView
        android:id="@+id/choose_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_username"
        android:textSize="26sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="130dp"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/choose_username"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_username_here"
        />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:id="@+id/acceptbtn"
        android:layout_below="@id/txtUsername"
        android:layout_marginTop="150dp"
        android:layout_marginLeft="20dp"
        android:text="@string/accept"
        android:textSize = "30dp"
        android:onClick="newGame"
        android:textColor="@android:color/white"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@id/acceptbtn"
        android:layout_marginTop="5dp"
        android:background="@android:color/white" />


</RelativeLayout>
