<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="3dp"
    android:weightSum="1">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/my_device" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:gravity="center_vertical"
        android:background="@android:color/holo_orange_dark" />

    <!-- Self information -->
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="?android:attr/listPreferredItemHeight"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:padding="3dip">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="fill_parent">
            <TextView
                android:id="@+id/my_name"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_vertical" />
            <TextView
                android:id="@+id/my_status"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:singleLine="true"
                android:ellipsize="marquee" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="20dp">
    <TextView
        android:id="@+id/my_players"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/my_game_players" />

    <TextView
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_toRightOf="@+id/my_players"
        android:text="@string/choose_level"
        android:id="@+id/textView"
        android:layout_gravity="right"
        android:layout_marginLeft="20dp" />
    </LinearLayout>
    <!-- Available peers -->

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:gravity="center_vertical"
        android:background="@android:color/holo_orange_dark" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="288dp"
        android:background="?android:attr/activatedBackgroundIndicator"
        android:padding="3dip"
        android:weightSum="1">
    <ListView
        android:id="@id/android:list"
        android:layout_width="221dp"
        android:layout_height="266dp"
        android:layout_marginBottom="90dp"
        android:layout_toLeftOf="@+id/levelPicker"
        android:drawSelectorOnTop="false"
        android:layout_gravity="right"
        android:layout_marginRight="0dp"
        android:layout_weight="0.25" />

        <NumberPicker
        android:id="@+id/levelPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/level"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="0dp"
        android:layout_gravity="center_vertical"
            android:layout_marginRight="40dp"
            android:orientation="vertical" />
    </LinearLayout>

    <Button
        android:background="@drawable/yellow_button"
        android:id="@+id/start"
        android:layout_width="200dp"
        android:layout_below="@+id/imageView1"
        android:layout_marginTop="7dp"
        android:layout_toRightOf="@+id/levelPicker"
        android:text="@string/start"
        style="@style/ButtonText"
        android:onClick="startGame"
        android:layout_marginLeft="90dp" />






</LinearLayout>
